--- a/src/components/controls/style.css
+++ b/src/components/controls/style.css
@@ -2,4 +2,10 @@
   display: flex;
   justify-content: flex-end;
   padding: 20px;
+  border-bottom: 1px dashed #ccc;
+}
+
+.Controls__btn {
+    width: 80px;
+    height: 21px;
 }
