--- a/src/components/head/style.css
+++ b/src/components/head/style.css
@@ -3,7 +3,9 @@
   background: #f5f5f5;
 }
 
-.Head h1 {
+.Head__title {
+	font-size: 32px;
+	font-weight: 700;
   margin: 0;
   padding: 20px 20px 10px;
 }
