--- a/src/components/head/style.css
+++ b/src/components/head/style.css
@@ -1,11 +1,18 @@
 .Head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   height: 80px;
   background: #f5f5f5;
 }
 
-.Head__title {
+.Head-title {
 	font-size: 32px;
 	font-weight: 700;
   margin: 0;
-  padding: 20px 20px 10px;
+  padding-left: 20px;
+}
+
+.Head div {
+  padding-right: 32px;
 }
