--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -1,35 +1,34 @@
 .Item {
   display: flex;
   justify-content: flex-start;
-  transition: background-color 1s;
+  align-items: center;
+  border-bottom: 1px dashed #ccc;
 }
 
-.Item__code {
+.Item-code {
   padding: 20px 10px 20px 20px;
 }
 
-.Item__title {
+.Item-title {
   width: 100%;
   padding: 20px 10px;
   font-size: 16px;
 }
 
-.Item__actions {
-  display: flex;
-  justify-content: flex-end;
-  padding: 20px 20px 20px 20px;
+.Item-price {
+  font-size: 18px;
 }
 
-.Item__price {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 100%;
-    font-size: 18px;
+.Item-btn {
+  width: 80px;
+  height: 21px;
+  margin-right: 20px;
+  margin-left: 24px;
+  cursor: pointer;
 }
 
-.Item__btn {
-    width: 80px;
-    height: 21px;
-    cursor: pointer;
+.Item-quantity {
+  text-align: right;
+  width: 100px;
+  margin-left: 25px;
 }
