--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -9,12 +9,17 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.70);
+  transform: 5s;
 }
 
 .Modal-content {
   width: 960px;
-  min-height: 400px;
+  min-height: 10px;
   background-color: #ffffff;
   border-radius: 10px;
   overflow: hidden;
+}
+
+.Modal-list {
+  padding: 63px 0 63px 0;
 }
